# david-workshop

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .replit  README.md  admin_commands.py  admingroup.py  config.py  crud.py  dev-notes.md  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  users.json  utils.py
alembic/: env.py
alembic/versions/: 12c600778ba8_add_event_triggers_tables.py
bot/: config.py  crud.py  main.py  utils.py
bot/commands/: admin.py  member.py  user.py
bot/config/: __init__.py  constants.py  environments.py
bot/crud/: action_events_crud.py  actions_crud.py  event_triggers_crud.py  events_crud.py  general_crud.py  inventory_crud.py  profiles_crud.py  prompts_crud.py  purchase_crud.py  reporting_crud.py  reports_crud.py  reward_events_crud.py  rewardevent.py  rewards_crud.py  shop_crud.py  temp.py  user_actions_crud.py  user_event_data_crud.py  users_crud.py
bot/domain/: dto.py  mapping.py
bot/presentation/: actions_presentation.py  event_triggers_presentation.py  events_presentation.py  profile_presentation.py  user_actions_presentation.py
bot/services/: action_events_service.py  equip_service.py  event_triggers_service.py  events_service.py  (+8 more)
db/: bot_database.db  database.py  drop_db.py  init_db.py  schema.py
deprecated/: main_depre.py  utils_depre.py
docs/: COMMAND.md  DATABASE.md  SETUP.md  TEST_README.md  current.md  flow-map.yml  folder structure.md  structure_and _catalogue.md
tests/: conftest.py  factories.py  helpers.py  test_admin_events.py  test_crud_events.py  test_crud_events_extended.py  test_utils.py
(+111 files in other folders)
